# Hazel

./: .gitignore  ChangeCounter.py  Classic.css  Hierarchy.txt  LICENCE.md  NamingConventions.md  README.md  TODO.md  counter_log.txt  qrc_scout.cpp  sampleRealWordlist.xml  wordlist.txt
CustomizableConsoleText/: LICENSE.md
UnixConsoleText/: README.md~
config/: .Xresources  xmltestfile.xml
doc/: Doxyfile  doxygen_log.txt  placeholder.txt
file_templates/: ClassSourceTemplate.txt  Class_Header_Template.h  Class_Header_Template.h~  Class_Source_Template.cpp  MainTemplate.txt
ide/: Hierarchy.txt~  LICENCE.md~  NamingConventions.md~  TODO.md~  sampleRealWordlist.xml
images/: hazel.xpm
install/: Hazel.desktop  Installer_Linux.bash  Ride.desktop
modules/: Hierarchy.txt  NamingConventions.md
modules/tyrannosaurus_lex/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_copy  Makefile_old  README.md  TODO.md  build.bash  cmake_install.cmake  tyrannosaurus_lex.cbp  tyrannosaurus_lex.layout
modules/tyrannosaurus_lex/nbproject/: project.xml
modules/tyrannosaurus_lex/nbproject/private/: Default.properties
modules/tyrannosaurus_lex/res/: helper.hpp  test.cpp
modules/tyrannosaurus_lex/src/: IfStmtHandler.cpp  MethodPrinter.cpp  MethodPrinter.hpp  main.cpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
res/: DOTXresources
src/: AdvOptPage_1.cpp  AdvOptPage_1.h  AdvOptPage_2.h  AdvOptPage_3.h  AdvOptPage_4.h  AdvOptPage_5.h  AdvOptionsGui.cpp  AdvOptionsGui.h  Build.cpp  Build.h  CentralCenterGui.cpp  CentralCenterGui.h  CentralGui.cpp  CentralGui.h  CentralTabs.cpp  CentralTabs.h  CodeFoldingArea.cpp  CodeFoldingArea.h  CustomMsgsGui.cpp  CustomMsgsGui.h  CustomPkgsGui.h  DebugActions.h  DebugGui.cpp  DebugGui.h  DebugToolbar.cpp  DetectOnStart.cpp  DetectOnStart.h  DirPropGui.cpp  DirPropGui.h  Directories.cpp  Directories.h  Directory.cpp  Directory.h  EnvCmds.cpp  EnvCmds.h  FTDirMenu.cpp  FTDirMenu.h  FTFileMenu.cpp  FTFileMenu.h  FTProjectMenu.cpp  (+230 more)
tyrannosaurus_lex/: Makefile  README.md  (+1 more)
(+3998 files in other folders)
